--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
+
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=true
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-admin-password=1234
+spring.h2.console.path=/h2-console
+
+logging.level.org.springframework.security=debug
+logging.level.org.springframework.web=debug
+logging.level.sql=debug
+logging.level.org.hibernate=debug
+logging.level.com.h2database=debug
