--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=h2
+
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
@@ -7,16 +9,18 @@ vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
-spring.jpa.defer-datasource-initialization = true
+
+server.error.include-message=always
 
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.enabled=true
-spring.h2.console.settings.trace=true
 spring.h2.console.settings.web-admin-password=1234
 spring.h2.console.path=/h2-console
 
-logging.level.org.springframework.security=debug
-logging.level.org.springframework.web=debug
-logging.level.sql=debug
-logging.level.org.hibernate=debug
-logging.level.com.h2database=debug
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
