--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,13 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-admin-password=1234
 spring.h2.console.path=/h2-console
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#Note: the embedded database is not initialized if we choose to create the init scripts
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=target/create.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=target/drop.sql
+spring.jpa.properties.hibernate.hbm2ddl.schema-generation.script.append=false
