--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.sql.init.mode=always
-#spring.sql.init.platform=h2
+spring.sql.init.platform=h2
