LDAP users search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,17 @@ spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metada
 spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=target/create.sql
 spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=target/drop.sql
 spring.jpa.properties.hibernate.hbm2ddl.schema-generation.script.append=false
+
+spring.data.rest.base-path=/api
+
+ldap.url=ldap://localhost:1389
+ldap.base=dc=example,dc=org
+ldap.bind-user=cn=admin,dc=example,dc=org
+ldap.bind-password=adminpassword
+ldap.password-attribute=userPassword
+ldap.username-attribute=uid
+ldap.user-search-base=ou=users
+ldap.user-dn-patterns=${ldap.username-attribute}={0},${ldap.user-search-base}
+ldap.user-object-class=inetOrgPerson
+ldap.user-search-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.user-object-class}))
+ldap.group-search-base=ou=groups
