--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,6 @@ ldap.bind-password=adminpassword
 ldap.user-search-base=ou=users
 ldap.user-dn-patterns=${ldap.username-attribute}={0},${ldap.user-search-base}
 ldap.user-object-class=inetOrgPerson
-ldap.user-search-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.user-object-class}))
+ldap.user-login-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.user-object-class}))
 
 ldap.group-search-base=ou=groups
