Init db with ldap users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ spring.data.rest.base-path=/api
 ldap.password-attribute=userPassword
 ldap.username-attribute=uid
 ldap.department-attribute=departmentNumber
+ldap.full-name-attribute=cn
 
 ldap.url=ldap://localhost:1389
 ldap.base=dc=example,dc=org
