JWT generation from Vaadin and read as Bearer (missing authorities)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,5 @@ ldap.user-object-class=inetOrgPerson
 ldap.user-login-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.user-object-class}))
 
 ldap.group-search-base=ou=groups
+
+jwt.auth.secret=QR1Jzl4w+nvbFIoo0dc/zSqTUpE0hLGENjvtOnv8wno=
