Controllers and Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,9 @@ vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
-
+# changing the vaadin url mapping, the public resources paths are different
+#vaadin.url-mapping=/ui/*
+vaadin.exclude-urls=/api/**
 server.error.include-message=always
 
 spring.h2.console.settings.web-allow-others=true
@@ -47,3 +49,5 @@ ldap.user-login-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.use
 ldap.group-search-base=ou=groups
 
 jwt.auth.secret=QR1Jzl4w+nvbFIoo0dc/zSqTUpE0hLGENjvtOnv8wno=
+
+springdoc.api-docs.path=/openapi/v3/api-docs
