--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=h2
+spring.profiles.active=@activated.profile@
 
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
@@ -46,6 +46,7 @@ ldap.user-dn-patterns=${ldap.username-attribute}={0},${ldap.user-search-base}
 ldap.user-object-class=inetOrgPerson
 ldap.user-login-filter=(&(${ldap.username-attribute}={0})(objectClass=${ldap.user-object-class}))
 
+# Dummy note: the groups search base must exist as when login, the user groups membership is checked
 ldap.group-search-base=ou=groups
 
 jwt.auth.secret=QR1Jzl4w+nvbFIoo0dc/zSqTUpE0hLGENjvtOnv8wno=
