Int test users loaded from LDAP

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
@@ -317,6 +332,9 @@
                     </plugin>
                 </plugins>
             </build>
+            <properties>
+                <activated.profile>postgres</activated.profile>
+            </properties>
         </profile>
 
     </profiles>
