--- a/src/main/resources/application-hsql.properties
+++ b/src/main/resources/application-hsql.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.embedded-database-connection=hsqldb
 spring.datasource.password=
-spring.datasource.url=jdbc:hsqldb:mem:flowcrm
+spring.datasource.url=jdbc:hsqldb:mem:skillia
 spring.datasource.username=sa
 
 spring.jpa.defer-datasource-initialization=true
