--- a/src/main/resources/application-mssql.properties
+++ b/src/main/resources/application-mssql.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.embedded-database-connection=none
 spring.datasource.password=Password1
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=flowcrm;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=skillia;trustServerCertificate=true
 spring.datasource.username=sa
 
 spring.jpa.defer-datasource-initialization=true
