--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.embedded-database-connection=none
 spring.datasource.password=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/flowcrm
+spring.datasource.url=jdbc:mysql://localhost:3306/skillia
 spring.datasource.username=root
 
 spring.jpa.defer-datasource-initialization=true
