--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,12 +1,12 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.embedded-database-connection=none
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/flowcrm
+spring.datasource.url=jdbc:postgresql://localhost:5432/skillia
 spring.datasource.username=postgres
 
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.platform=postgres
