--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - POSTGRES_DB=skillia
     networks:
       - app-network
+    command: [ "postgres", "-c", "log_connections=on", "-c",  "log_disconnections=on",  "-c",  "log_statement=all" ]
   openldap:
     image: bitnami/openldap:2.6.6-debian-11-r59
     ports:
