--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.embedded-database-connection=h2
 spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:flowcrm
+spring.datasource.url=jdbc:h2:mem:skillia
 # AUTO_SERVER=TRUE allows connecting to the db from any db client, but is not compatible with in-memory db
 spring.datasource.username=sa
 
