--- a/src/main/resources/application-mariadb.properties
+++ b/src/main/resources/application-mariadb.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.embedded-database-connection=none
 spring.datasource.password=mariadb
-spring.datasource.url=jdbc:mariadb://localhost:3306/flowcrm
+spring.datasource.url=jdbc:mariadb://localhost:3306/skillia
 spring.datasource.username=root
 
 spring.jpa.defer-datasource-initialization=true
