--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,10 @@
             <version>3.42.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
