--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
+
+spring.flyway.enabled=false
