Auth controller error handling, return json

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,4 @@ ldap.group-search-base=ou=groups
 jwt.auth.secret=QR1Jzl4w+nvbFIoo0dc/zSqTUpE0hLGENjvtOnv8wno=
 
 springdoc.api-docs.path=/openapi/v3/api-docs
+springdoc.default-produces-media-type=application/json
