--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.h2.console.settings.web-admin-password=1234
 spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 #Note: the embedded database is not initialized if we choose to create the init scripts
