First Selenium test (login)

--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,24 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <!-- Version provided by Vaaadin -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia.</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v126</artifactId>
+            <version>4.22.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
