--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <!-- Project from https://start.vaadin.com/ -->
     <groupId>com.example.application</groupId>
-    <artifactId>flowcrmtutorial</artifactId>
-    <name>flowcrmtutorial</name>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>skillia</artifactId>
+    <name>skillia</name>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
