--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+vaadin.launch-browser=false
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
@@ -53,3 +53,5 @@ jwt.auth.secret=QR1Jzl4w+nvbFIoo0dc/zSqTUpE0hLGENjvtOnv8wno=
 
 springdoc.api-docs.path=/openapi/v3/api-docs
 springdoc.default-produces-media-type=application/json
+
+webdriver.headless=false
