--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     #image: skillia:latest
     ports:
-      - 8080:8080
+      - "${SKILLIA_PORT:-8080}:8080"
     depends_on:
       - db
       - openldap
