--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,8 @@ ldap.username-attribute=uid
 ldap.department-attribute=departmentNumber
 ldap.full-name-attribute=cn
 
-ldap.url=ldap://localhost:1389
+ldap.port=1389
+ldap.url=ldap://localhost:${ldap.port}
 ldap.base=dc=example,dc=org
 
 ldap.bind-user=cn=admin,dc=example,dc=org
