allow usage of embedded postgres db with spring profile embedded-postgres

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,12 @@
             <artifactId>unboundid-ldapsdk</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.zonky.test</groupId>
+            <artifactId>embedded-postgres</artifactId>
+            <version>2.1.0</version>
+            <!-- allow using an embedded db, for testing or dev -->
+        </dependency>
     </dependencies>
 
     <build>
