--- a/src/main/resources/application-hsql.properties
+++ b/src/main/resources/application-hsql.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
+
+spring.flyway.enabled=false
