--- a/src/main/resources/application-embedded-ldap.properties
+++ b/src/main/resources/application-embedded-ldap.properties
@@ -1,9 +1,12 @@
 # properties active in "embedldap" profile will set up the embedded server and populate it
 spring.ldap.embedded.ldif=classpath:ldif/example-01.ldif
 spring.ldap.embedded.base-dn=${ldap.base}
-spring.ldap.embedded.credential.username=${ldap.bind-user}
-spring.ldap.embedded.credential.password=${ldap.bind-password}
-spring.ldap.embedded.port=${ldap.port}
+# For some reason, when creating the LdapContextSource, EmbeddedLdapAutoConfiguration
+# uses the original base property instead of the embedded one, so we set it here
+spring.ldap.base=${spring.ldap.embedded.base-dn}
+spring.ldap.embedded.credential.username=cn=embedded-admin,${spring.ldap.embedded.base-dn}
+spring.ldap.embedded.credential.password=i-love-spring
+spring.ldap.embedded.port=8389
 spring.ldap.embedded.validation.enabled=false
 
 #logging.level.org.springframework.security=DEBUG
