Use existing instead of custom LDAP autoconfiguration

--- a/src/main/resources/application-embedded-ldap.properties
+++ b/src/main/resources/application-embedded-ldap.properties
@@ -1,9 +1,11 @@
 # properties active in "embedldap" profile will set up the embedded server and populate it
 spring.ldap.embedded.ldif=classpath:ldif/example-01.ldif
-spring.ldap.embedded.base-dn=${ldap.base}
+spring.ldap.embedded.base-dn=dc=example,dc=org
 # For some reason, when creating the LdapContextSource, EmbeddedLdapAutoConfiguration
 # uses the original base property instead of the embedded one, so we set it here
 spring.ldap.base=${spring.ldap.embedded.base-dn}
+# Also, unset the original url, or it will be chosen over the embedded one
+spring.ldap.urls=
 spring.ldap.embedded.credential.username=cn=embedded-admin,${spring.ldap.embedded.base-dn}
 spring.ldap.embedded.credential.password=i-love-spring
 spring.ldap.embedded.port=8389
