--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,12 +35,10 @@ ldap.username-attribute=uid
 ldap.department-attribute=departmentNumber
 ldap.full-name-attribute=cn
 
-ldap.port=1389
-ldap.url=ldap://localhost:${ldap.port}
-ldap.base=dc=example,dc=org
-
-ldap.bind-user=cn=admin,dc=example,dc=org
-ldap.bind-password=adminpassword
+spring.ldap.urls=ldap://localhost:1389
+spring.ldap.base=dc=example,dc=org
+spring.ldap.username=cn=admin,${spring.ldap.base}
+spring.ldap.password=adminpassword
 
 ldap.user-search-base=ou=users
 ldap.user-dn-patterns=${ldap.username-attribute}={0},${ldap.user-search-base}
