--- a/src/main/resources/application-embedded-ldap.properties
+++ b/src/main/resources/application-embedded-ldap.properties
@@ -6,9 +6,10 @@ spring.ldap.embedded.base-dn=dc=example,dc=org
 spring.ldap.base=${spring.ldap.embedded.base-dn}
 # Also, unset the original url, or it will be chosen over the embedded one
 spring.ldap.urls=
-spring.ldap.embedded.credential.username=cn=embedded-admin,${spring.ldap.embedded.base-dn}
+spring.ldap.embedded.credential.username=cn=admin-embedded,${spring.ldap.embedded.base-dn}
 spring.ldap.embedded.credential.password=i-love-spring
-spring.ldap.embedded.port=8389
+# The Default port value is 0, which makes it use a random one
+#spring.ldap.embedded.port=8389
 spring.ldap.embedded.validation.enabled=false
 
 #logging.level.org.springframework.security=DEBUG
