--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=@activated.profile@
+spring.profiles.active=@activeProfiles@
 
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
