Show tags on skills mgmt view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,6 @@ springdoc.api-docs.path=/openapi/v3/api-docs
 springdoc.default-produces-media-type=application/json
 
 webdriver.headless=false
+webdriver.chrome.binary=
+
+initdbfromjava=false
