--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <java.version>17</java.version>
         <vaadin.version>24.3.0</vaadin.version>
-        <activeProfiles>h2</activeProfiles>
+        <activeProfiles>h2,embedded-ldap</activeProfiles>
         <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
         <!-- Can't use 3.6.0 due to https://issues.apache.org/jira/browse/MPIR-462 -->
         <maven-project-info-reports-plugin.version>3.8.0</maven-project-info-reports-plugin.version>
