Use existing instead of custom LDAP autoconfiguration

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-ldap.url=ldap://openldap:1389
+spring.ldap.urls=ldap://openldap:1389
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.embedded-database-connection=none
