--- a/pom.xml
+++ b/pom.xml
@@ -624,15 +624,9 @@
         </profile>
 
         <profile>
-            <id>embedded-mariadb-windows</id>
+            <id>embedded-mariadb</id>
             <activation>
-                <property>
-                    <name>useEmbeddedMariaDB</name>
-                    <value>true</value>
-                </property>
-                <os>
-                    <family>windows</family>
-                </os>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
@@ -640,37 +634,19 @@
                     <artifactId>mariaDB4j-db-winx64</artifactId>
                     <version>10.11.5-fix1</version>
                 </dependency>
-            </dependencies>
-            <properties>
-                <activeProfiles>embedded-ldap,embedded-mariadb</activeProfiles>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>embedded-mariadb-linux</id>
-            <activation>
-                <property>
-                    <name>useEmbeddedMariaDB</name>
-                    <value>true</value>
-                </property>
-                <os>
-                    <name>linux</name>
-                </os>
-            </activation>
-            <dependencies>
                 <dependency>
                     <groupId>ch.vorburger.mariaDB4j</groupId>
                     <artifactId>mariaDB4j-db-linux64</artifactId>
                     <version>10.11.5</version>
                 </dependency>
             </dependencies>
-            <properties>
-                <activeProfiles>embedded-ldap,embedded-mariadb</activeProfiles>
-            </properties>
         </profile>
 
         <profile>
             <id>embedded-postgres</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>io.zonky.test</groupId>
@@ -681,9 +657,17 @@
                     </exclusions>
                 </dependency>
             </dependencies>
-            <properties>
-                <activeProfiles>embedded-ldap,embedded-postgres</activeProfiles>
-            </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.zonky.test.postgres</groupId>
+                        <artifactId>embedded-postgres-binaries-bom</artifactId>
+                        <version>16.1.0</version>
+                        <type>pom</type>
+                        <scope>import</scope>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
         </profile>
 
         <profile>
