--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
         <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
         <maven-help-plugin.version>3.5.1</maven-help-plugin.version>
+        <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
         <checker.version>3.42.0</checker.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <zonky-embedded-postgres-runner.version>2.1.0</zonky-embedded-postgres-runner.version>
@@ -236,21 +237,6 @@
             <version>4.22.0</version>
             <scope>test</scope>
         </dependency>
-        <!-- allow using an embedded db, for testing or dev -->
-        <dependency>
-            <groupId>io.zonky.test</groupId>
-            <artifactId>embedded-postgres</artifactId>
-            <version>${zonky-embedded-postgres-runner.version}</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-            <!-- Only "core" dependency by default, sub-dependencies (binaries) are excluded -->
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
         <dependency>
             <groupId>ch.vorburger.mariaDB4j</groupId>
             <!-- Only "core" dependency by default, sub-dependencies (binaries) are excluded -->
@@ -399,6 +385,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-help-plugin</artifactId>
                 <version>${maven-help-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven-dependency-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
@@ -626,9 +617,8 @@
                     <groupId>io.zonky.test</groupId>
                     <artifactId>embedded-postgres</artifactId>
                     <version>${zonky-embedded-postgres-runner.version}</version>
-                    <exclusions>
-                        <!-- All excluded by default, no exclusions when using this profile -->
-                    </exclusions>
+                    <scope>provided</scope>
+                    <optional>true</optional>
                 </dependency>
             </dependencies>
             <dependencyManagement>
